--- a/pollux_interface/templates/app_scenario_analysis_p2h2case.html
+++ b/pollux_interface/templates/app_scenario_analysis_p2h2case.html
@@ -172,7 +172,7 @@
                     <tr>
                         <td>
                         <div class="form-control" id="power_supply_profile_label">
-                            Power supply (dimensionless with range: [0, 1])
+                            Power supply [MW]
                         </div>
                         </td>
                         <td>
@@ -197,7 +197,7 @@
                     <tr>
                         <td>
                         <div class="form-control" id="power_demand_profile_label">
-                            Power demand (dimensionless with range: [0, 1])
+                            Power demand [MW]
                         </div>
                         </td>
                         <td>
@@ -222,7 +222,7 @@
                     <tr>
                         <td>
                         <div class="form-control" id="hydrogen_demand_profile_label">
-                            Hydrogen demand (dimensionless with range: [0, 1])
+                            Hydrogen demand [MW]
                         </div>
                         </td>
                         <td>
@@ -276,12 +276,12 @@
                     <tbody>
                     <tr>
                         <td>
-                        <div class="form-control" id="power_splitter_profile_label">
+                        <div class="form-control" id="splitter1_profile_label">
                             Power splitter control profile (dimensionless with range: [0, 1])
                         </div>
                         </td>
                         <td>
-<!--                        <select class="form-control" id="power_splitter_profile" style="background-color: white; color: black;">-->
+<!--                        <select class="form-control" id="splitter1_profile" style="background-color: white; color: black;">-->
 <!--                            <option value="profile_1">-->
 <!--                            Control profile 1-->
 <!--                            </option>-->
@@ -292,21 +292,21 @@
 <!--                            Load CSV...-->
 <!--                            </option>-->
 <!--                        </select>-->
-<!--                        <input accept=".csv" id="power_splitter_control_profile_csv" onchange="handleFileSelect(event)" style="display: none;" type="file"/>-->
-                        <button class="btn btn-primary" id="power_splitter_control_profile_button" style="background-color: white; color: black;">
+<!--                        <input accept=".csv" id="splitter1_control_profile_csv" onchange="handleFileSelect(event)" style="display: none;" type="file"/>-->
+                        <button class="btn btn-primary" id="splitter1_control_profile_button" style="background-color: white; color: black;">
                             Load CSV
                         </button>
-                        <input accept=".csv" id="power_splitter_control_profile_csv" onchange="handleFileSelect(event)" style="display: none;" type="file"/>
+                        <input accept=".csv" id="splitter1_control_profile_csv" onchange="handleFileSelect(event)" style="display: none;" type="file"/>
                         </td>
                     </tr>
                     <tr>
                         <td>
-                        <div class="form-control" id="hydrogen_splitter_profile_label">
+                        <div class="form-control" id="splitter2_profile_label">
                             Hydrogen splitter control profile (dimensionless with range: [0, 1])
                         </div>
                         </td>
                         <td>
-<!--                        <select class="form-control" id="hydrogen_splitter_profile" style="background-color: white; color: black;">-->
+<!--                        <select class="form-control" id="splitter2_profile" style="background-color: white; color: black;">-->
 <!--                            <option value="profile_1">-->
 <!--                            Control profile 1-->
 <!--                            </option>-->
@@ -317,21 +317,21 @@
 <!--                            Load CSV...-->
 <!--                            </option>-->
 <!--                        </select>-->
-<!--                        <input accept=".csv" id="hydrogen_splitter_control_profile_csv" onchange="handleFileSelect(event)" style="display: none;" type="file"/>-->
-                        <button class="btn btn-primary" id="hydrogen_splitter_control_profile_button" style="background-color: white; color: black;">
+<!--                        <input accept=".csv" id="splitter2_control_profile_csv" onchange="handleFileSelect(event)" style="display: none;" type="file"/>-->
+                        <button class="btn btn-primary" id="splitter2_control_profile_button" style="background-color: white; color: black;">
                             Load CSV
                         </button>
-                        <input accept=".csv" id="hydrogen_splitter_control_profile_csv" onchange="handleFileSelect(event)" style="display: none;" type="file"/>
+                        <input accept=".csv" id="splitter2_control_profile_csv" onchange="handleFileSelect(event)" style="display: none;" type="file"/>
                         </td>
                     </tr>
                     <tr>
                         <td>
-                        <div class="form-control" id="gas_storage_profile_label">
-                            Gas storage control profile (dimensionless with range: [0, 1])
+                        <div class="form-control" id="hydrogen_storage_profile_label">
+                            Gas storage control profile [kg/h]
                         </div>
                         </td>
                         <td>
-<!--                        <select class="form-control" id="gas_storage_profile" style="background-color: white; color: black;">-->
+<!--                        <select class="form-control" id="hydrogen_storage_profile" style="background-color: white; color: black;">-->
 <!--                            <option value="profile_1">-->
 <!--                            Control profile 1-->
 <!--                            </option>-->
@@ -342,11 +342,11 @@
 <!--                            Load CSV...-->
 <!--                            </option>-->
 <!--                        </select>-->
-<!--                        <input accept=".csv" id="gas_storage_profile_csv" onchange="handleFileSelect(event)" style="display: none;" type="file"/>-->
-                        <button class="btn btn-primary" id="gas_storage_profile_button" style="background-color: white; color: black;">
+<!--                        <input accept=".csv" id="hydrogen_storage_profile_csv" onchange="handleFileSelect(event)" style="display: none;" type="file"/>-->
+                        <button class="btn btn-primary" id="hydrogen_storage_profile_button" style="background-color: white; color: black;">
                             Load CSV
                         </button>
-                        <input accept=".csv" id="gas_storage_profile_csv" onchange="handleFileSelect(event)" style="display: none;" type="file"/>
+                        <input accept=".csv" id="hydrogen_storage_profile_csv" onchange="handleFileSelect(event)" style="display: none;" type="file"/>
                         </td>
                     </tr>
                     </tbody>
@@ -358,24 +358,28 @@
         </div>
 
 
-        <!--    ============================= Optimization mode panel ============================= -->
-        <div class="card full-width-panel" id="optimization_parameters_panel" style="display: none;">
+        <!--    ============================= Optimisation mode panel ============================= -->
+        <div class="card full-width-panel" id="optimisation_parameters_panel" style="display: none;">
 
             <h3 class="card-header">
-                Optimization mode
+                Optimisation mode
             </h3>
             <div class="card-body">
-                <div style="display: inline-flex; align-items: center;">
-                    <label class="mr-2" for="optimization_method" style="margin-right: 10px;">
-                        Optimization method:
-                    </label>
-                    <select class="form-control" id="optimization_method" style="background-color: white; color: black; width: auto; min-width: 170px;">
-                        <option value="trust-constr">trust-constr</option>
-                        <option value="L-BFGS-B">L-BFGS-B</option>
-                        <option value="Powell">Powell</option>
-                        <option value="differential-evolution">differential-evolution</option>
-                    </select>
-                </div>
+                <label class="mr-2" for="optimisation_method" style="margin-right: 10px; font-size: 18px" >
+                    Optimisation method:
+                </label>
+                <input id="optimisation_method" type="text" value="trust-constr" readonly size="13"/>
+<!--                <div style="display: inline-flex; align-items: center;">-->
+<!--                    <label class="mr-2" for="optimisation_method" style="margin-right: 10px;">-->
+<!--                        optimisation method:-->
+<!--                    </label>-->
+<!--                    <select class="form-control" id="optimisation_method" style="background-color: white; color: black; width: auto; min-width: 170px;">-->
+<!--                        <option value="trust-constr">trust-constr</option>-->
+<!--                        <option value="L-BFGS-B">L-BFGS-B</option>-->
+<!--                        <option value="Powell">Powell</option>-->
+<!--                        <option value="differential-evolution">differential-evolution</option>-->
+<!--                    </select>-->
+<!--                </div>-->
                 <div class="panel panel-default">
                     <div class="panel-body">
                         <table class="table table-bordered" id="control_parameters">
@@ -390,50 +394,50 @@
                             <tbody>
                                 <tr>
                                     <td>
-                                        <div class="form-control" id="power_splitter_parameters">
+                                        <div class="form-control" id="splitter1_opt_parameters">
                                             Power splitter (dimensionless with range: [0, 1])
                                         </div>
                                     </td>
                                     <td>
-                                        <input type="number" class="form-control" id="power_splitter_initial_value" placeholder="Enter initial value" value="0.5">
+                                        <input type="number" class="form-control" id="splitter1_initial_value" placeholder="Enter initial value" value="0.5">
                                     </td>
                                     <td>
-                                        <input type="number" class="form-control" id="power_splitter_lower_bound" placeholder="Enter lower bound" value="0.0">
+                                        <input type="number" class="form-control" id="splitter1_lower_bound" placeholder="Enter lower bound" value="0.0">
                                     </td>
                                     <td>
-                                        <input type="number" class="form-control" id="power_splitter_upper_bound" placeholder="Enter upper bound" value="1.0">
+                                        <input type="number" class="form-control" id="splitter1_upper_bound" placeholder="Enter upper bound" value="0.1">
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>
-                                        <div class="form-control" id="hydrogen_splitter_parameters">
+                                        <div class="form-control" id="splitter2_opt_parameters">
                                             Hydrogen splitter (dimensionless with range: [0, 1])
                                         </div>
                                     </td>
                                     <td>
-                                        <input type="number" class="form-control" id="hydrogen_splitter_initial_value" placeholder="Enter initial value" value="0.5">
+                                        <input type="number" class="form-control" id="splitter2_initial_value" placeholder="Enter initial value" value="0.6">
                                     </td>
                                     <td>
-                                        <input type="number" class="form-control" id="hydrogen_splitter_lower_bound" placeholder="Enter lower bound" value="0.0">
+                                        <input type="number" class="form-control" id="splitter2_lower_bound" placeholder="Enter lower bound" value="0.0">
                                     </td>
                                     <td>
-                                        <input type="number" class="form-control" id="hydrogen_splitter_upper_bound" placeholder="Enter upper bound" value="1.0">
+                                        <input type="number" class="form-control" id="splitter2_upper_bound" placeholder="Enter upper bound" value="0.1">
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>
-                                        <div class="form-control" id="gas_storage_parameters">
-                                            Gas storage (dimensionless with range: [0, 1])
+                                        <div class="form-control" id="hydrogen_storage_opt_parameters">
+                                            Gas storage [kg/h]
                                         </div>
                                     </td>
                                     <td>
-                                        <input type="number" class="form-control" id="gas_storage_initial_value" placeholder="Enter initial value" value="0.5">
+                                        <input type="number" class="form-control" id="hydrogen_storage_initial_value" placeholder="Enter initial value" value="0.02">
                                     </td>
                                     <td>
-                                        <input type="number" class="form-control" id="gas_storage_lower_bound" placeholder="Enter lower bound" value="0.0">
+                                        <input type="number" class="form-control" id="hydrogen_storage_lower_bound" placeholder="Enter lower bound" value="0">
                                     </td>
                                     <td>
-                                        <input type="number" class="form-control" id="gas_storage_upper_bound" placeholder="Enter upper bound" value="1.0">
+                                        <input type="number" class="form-control" id="hydrogen_storage_upper_bound" placeholder="Enter upper bound" value="0.05">
                                     </td>
                                 </tr>
                             </tbody>
