--- a/pollux_interface/templates/app_scenario_analysis_p2heatcase.html
+++ b/pollux_interface/templates/app_scenario_analysis_p2heatcase.html
@@ -270,12 +270,12 @@
                     <tbody>
                     <tr>
                         <td>
-                        <div class="form-control" id="power_splitter_profile_label">
+                        <div class="form-control" id="splitter1_profile_label">
                             Power splitter control profile
                         </div>
                         </td>
                         <td>
-                        <select class="form-control" id="power_splitter_profile" style="background-color: white; color: black;">
+                        <select class="form-control" id="splitter1_profile" style="background-color: white; color: black;">
                             <option value="profile_1">
                             Control profile 1
                             </option>
@@ -286,17 +286,17 @@
                             Load CSV...
                             </option>
                         </select>
-                        <input accept=".csv" id="power_splitter_control_profile_csv" onchange="handleFileSelect(event)" style="display: none;" type="file"/>
+                        <input accept=".csv" id="splitter1_control_profile_csv" onchange="handleFileSelect(event)" style="display: none;" type="file"/>
                         </td>
                     </tr>
                     <tr>
                         <td>
-                        <div class="form-control" id="hydrogen_splitter_profile_label">
+                        <div class="form-control" id="splitter2_profile_label">
                             Hydrogen splitter control profile
                         </div>
                         </td>
                         <td>
-                        <select class="form-control" id="hydrogen_splitter_profile" style="background-color: white; color: black;">
+                        <select class="form-control" id="splitter2_profile" style="background-color: white; color: black;">
                             <option value="profile_1">
                             Control profile 1
                             </option>
@@ -307,17 +307,17 @@
                             Load CSV...
                             </option>
                         </select>
-                        <input accept=".csv" id="hydrogen_splitter_control_profile_csv" onchange="handleFileSelect(event)" style="display: none;" type="file"/>
+                        <input accept=".csv" id="splitter2_control_profile_csv" onchange="handleFileSelect(event)" style="display: none;" type="file"/>
                         </td>
                     </tr>
                     <tr>
                         <td>
-                        <div class="form-control" id="gas_storage_profile_label">
+                        <div class="form-control" id="hydrogen_storage_profile_label">
                             Gas storage control profile
                         </div>
                         </td>
                         <td>
-                        <select class="form-control" id="gas_storage_profile" style="background-color: white; color: black;">
+                        <select class="form-control" id="hydrogen_storage_profile" style="background-color: white; color: black;">
                             <option value="profile_1">
                             Control profile 1
                             </option>
@@ -328,7 +328,7 @@
                             Load CSV...
                             </option>
                         </select>
-                        <input accept=".csv" id="gas_storage_profile_csv" onchange="handleFileSelect(event)" style="display: none;" type="file"/>
+                        <input accept=".csv" id="hydrogen_storage_profile_csv" onchange="handleFileSelect(event)" style="display: none;" type="file"/>
                         </td>
                     </tr>
                     </tbody>
@@ -343,11 +343,11 @@
                 Toggle mode
             </button>
             <h3 class="mb-0 ml-3">
-                Optimization mode
+                Optimisation mode
             </h3>
             </div>
             <h4 class="card-header">
-            Optimization parameters
+            Optimisation parameters
             </h4>
             <div class="card-body">
             <div class="panel panel-default">
@@ -372,30 +372,30 @@
                     <tbody>
                     <tr>
                         <td>
-                        <input class="form-control" id="power_splitter_bounds" value="Power splitter control"/>
+                        <input class="form-control" id="splitter1_bounds" value="Power splitter control"/>
                         </td>
                         <td>
-                        <input class="form-control" id="power_splitter_initial_guess" value="0.5"/>
+                        <input class="form-control" id="splitter1_initial_guess" value="0.5"/>
                         </td>
                         <td>
-                        <input class="form-control" id="power_splitter_upper_bound" value="0"/>
+                        <input class="form-control" id="splitter1_upper_bound" value="0"/>
                         </td>
                         <td>
-                        <input class="form-control" id="power_splitter_lower_bound" value="1"/>
+                        <input class="form-control" id="splitter1_lower_bound" value="1"/>
                         </td>
                     </tr>
                     <tr>
                         <td>
-                        <input class="form-control" id="hydrogen_splitter_bounds" value="Hydrogen splitter control"/>
+                        <input class="form-control" id="splitter2_bounds" value="Hydrogen splitter control"/>
                         </td>
                         <td>
-                        <input class="form-control" id="hydrogen_splitter_initial_guess" value="0.5"/>
+                        <input class="form-control" id="splitter2_initial_guess" value="0.5"/>
                         </td>
                         <td>
-                        <input class="form-control" id="hydrogen_splitter_upper_bound" value="0"/>
+                        <input class="form-control" id="splitter2_upper_bound" value="0"/>
                         </td>
                         <td>
-                        <input class="form-control" id="hydrogen_splitter_lower_bound" value="1"/>
+                        <input class="form-control" id="splitter2_lower_bound" value="1"/>
                         </td>
                     </tr>
                     <tr>
@@ -415,10 +415,10 @@
                     </tbody>
                 </table>
                 <div class="form-group d-flex align-items-center">
-                    <label class="mr-2" for="optimization_obj_func">
-                    Optimization objective function:
+                    <label class="mr-2" for="optimisation_obj_func">
+                    Optimisation objective function:
                     </label>
-                    <select class="form-control custom-select-width" id="optimization_obj_func" style="background-color: white; color: black;">
+                    <select class="form-control custom-select-width" id="optimisation_obj_func" style="background-color: white; color: black;">
                     <option value="objective_func_1">
                         Objective function 1
                     </option>
