--- a/pollux_interface/templates/base.html
+++ b/pollux_interface/templates/base.html
@@ -86,11 +86,18 @@
                 </li>
                 <li>
                 <a href="/app/scenarioanalysis">
-                    <i class="tim-icons icon-vector">
+                    <i class="tim-icons icon-settings">
                     </i>
                     Scenario Analysis
                 </a>
                 </li>
+                <li>
+                <a href="/app/visualisation">
+                    <i class="tim-icons icon-chart-bar-32"></i>
+                    Visualisation
+                    </a>
+                </li>
+
 <!--                <li>-->
 <!--                <a href="/app/timeseriesviewer">-->
 <!--                    <i class="tim-icons icon-chart-bar-32">-->
